# cfg-tt

./: Cargo.toml  README.md  expand.rs
.github/workflows/: ci.yml
src/: cfg.rs  find.rs  lib.rs
tests/pass/: duplicated_cfg.rs  generic_splice.rs  macro_args.rs  mid_expr_splice.rs  nested_other_attrs.rs  no_cfg.rs  op_boundaries.rs  op_splice.rs  path_splice.rs  pattern_splice.rs  single_cfg.rs  supertrait_splice.rs  where_splice.rs
