[package]
name = "cfg-tt"
version = "0.2.0"
description = "A procedural macro that allows using #[cfg] anywhere and at token granularity."
readme = "README.md"
repository = "https://github.com/OpenByteDev/dll-syringe" 
homepage = "https://github.com/OpenByteDev/dll-syringe"
documentation = "https://docs.rs/dll-syringe"
license = "MIT"
authors = ["OpenByte <development.openbyte@gmail.com>"]
edition = "2024"
keywords = [
    "cfg",
    "token",
    "anywhere",
    "proc-macro",
    "token-tree",
]
categories = [
    "rust-patterns"
]

[lib]
proc-macro = true

[dependencies]
proc-macro2 = { version = "1.0", features = ["span-locations"] }
quote = "1.0"
syn = { version = "2.0", features = ["full", "parsing", "extra-traits"] }

[dev-dependencies]
trybuild = "1.0"
static_assertions = "1.1.0"
